--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
-<div class="row">
-	<div class="col-md-4">Columns: 4</div>
-	<div class="col-md-4">Columns: 4</div>
-	<div class="col-md-4">Columns: 4</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 bg-primary">Columns: 4</div>
+		<div class="col-md-4 bg-info">Columns: 4</div>
+		<div class="col-md-4 bg-warning">Columns: 4</div>
+	</div>
 </div>
