--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photo App</title>
-	<link rel="stylesheet" href="/css/bootstrap.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
+
+<!-- Nav Bar -->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <div class="collapse navbar-collapse">
+    	<ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/login">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 	<%= yield %>
 
