--- a/views/signup.erb
+++ b/views/signup.erb
@@ -4,18 +4,18 @@
 
     <h3 class="text-center">Create an account</h3>
 
-      <form>
+      <form action="/login" method="post">
         <div class="form-group">
           <label for="InputUsername">Choose a Username</label>
-          <input type="text" class="form-control" id="InputUsername" placeholder="E.g. 6ofSpades">
+          <input type="text" class="form-control" name="InputUsername" placeholder="E.g. 6ofSpades">
         </div>
         <div class="form-group">
           <label for="InputEmail">Email address</label>
-          <input type="email" class="form-control" id="InputEmail" placeholder="E.g. 6ofSpades@gmail.com">
+          <input type="email" class="form-control" name="InputEmail" placeholder="E.g. 6ofSpades@gmail.com">
         </div>
         <div class="form-group">
           <label for="InputPassword">Password</label>
-          <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+          <input type="password" class="form-control" name="InputPassword" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-default">Let's Go!</button>
       </form>
