--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,9 +14,10 @@
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
+      	<li><a href="/stores">Stores</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Login</a></li>
       </ul>
     </div>
   </div>
