--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,8 @@
       	<li><a href="/stores">Stores</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+      	<li><a href="/product/new">Create new product</a></li>
+      	<li><a href="/stores/new">Create new store</a></li>
         <li><a href="/signup">Login</a></li>
       </ul>
     </div>
