--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,5 +30,6 @@
 
 	<script src="/js/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+  <script src="/js/application.js"></script>
 </body>
 </html>
