--- a/views/new_product.erb
+++ b/views/new_product.erb
@@ -2,17 +2,17 @@
   <div class="row">
     <div class="col-md-6 col-centered">
 
-    <h3 class="text-center">Create an New Product</h3>
+      <h3 class="text-center">Create an New Product</h3>
 
       <form action="/product/new" method="post">
         <div class="form-group">
           <label for="storeId">Store</label>
           <select name="storeId" id="storeId" class="form-control">
             <% @stores.each do |store| %>
-              <option value="<%= store.id %>"><%= store.name %></option>
+            <option value="<%= store.id %>"><%= store.name %></option>
             <% end %>
           </select>
-      </div>
+        </div>
         <div class="form-group">
           <label for="productName">Product Name</label>
           <input type="text" class="form-control" name="productName" placeholder="Blue Sweater">
@@ -32,15 +32,23 @@
           <label for="categoryId">Category</label>
           <select name="categoryId" id="categoryId" class="form-control">
             <% @categories.each do |category| %>
-              <option value="<%= category.id %>"><%= category.name %></option>
+            <option value="<%= category.id %>"><%= category.name %></option>
             <% end %>
+            <option value="99">Add new</option>
           </select>
-      </div>
-      <div class="form-group">
-        <label for="description">Product Description</label>
-        <textarea class="form-control" name="description" rows="3" placeholder="Include some info about your product."></textarea>
-      </div>
-        <button type="submit" class="btn btn-default">Create</button>
+        </div>
+
+        <!-- Hidden 'new category' field -->
+        <div class="form-group" id="newCategory">
+          <label for="new_category">New Category</label>
+          <input type="text" class="form-control" name="newCategory">
+        </div>
+
+        <div class="form-group">
+          <label for="description">Product Description</label>
+          <textarea class="form-control" name="description" rows="3" placeholder="Include some info about your product."></textarea>
+        </div>
+        <button type="submit" class="btn btn-default" id="newProductButton">Create</button>
       </form>
     </div>
   </div>
