--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,8 +28,10 @@
 
 	<%= yield %>
 
-	<script src="/js/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/imagesloaded.js"></script>
+  <script src="/js/masonry.pkgd.min.js"></script>
   <script src="/js/application.js"></script>
 </body>
 </html>
