--- a/views/store_show_page.erb
+++ b/views/store_show_page.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" id="feed">
 	<h1 class="text-center"><%= @store.name %></h1>
 		<div class="row">
 			<% @products.each do |product| %>
-				<div class="col-md-4"><a href="/stores/<%= @store.name %>/<%= product.id %>"><img src="<%= product.image_url %>" class="img-responsive" class="img-responsive img-rounded"></a></div>
+				<div class="item"><a href="/stores/<%= @store.name %>/<%= product.id %>"><img src="<%= product.image_url %>" class="img-responsive" class="img-responsive img-rounded"></a></div>
 			<% end %>
 		</div>
 </div>
