--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,3 +28,42 @@
 #feed img {
 	min-width: 100%;
 }
+
+.productInfo {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.productHoverTop {
+	background-color: rgba(0,0,0,0.6);
+	padding: 20px 10px;
+	color: #fff;
+	margin: 0;
+}
+
+.productHoverTop .glyphicon {
+	font-size: 2em;
+	vertical-align: middle;
+	margin-right: 10px;
+}
+
+.productHoverTop .label {
+	font-size: 1.2em;
+	line-height: 1.2em;
+}
+
+.productHoverTop a {
+	text-decoration: none;
+}
+
+.label-as-badge {
+    border-radius: 1em;
+}
+
+.productLikes {
+	color: red;
+}
