--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,40 @@
 <div class="container" id="feed">
 	<div class="row">
 		<% @products.each do |product| %>
-			<div class="item"><a href="/stores/<%= product.store.name %>/<%= product.id %>"><img src="<%= product.image_url %>" class="img-responsive"></a></div>
+			<div class="item">
+			<a href="/stores/<%= product.store.name %>/<%= product.id %>">
+				<img src="<%= product.image_url %>" class="img-responsive" class="img-responsive img-rounded">
+			</a>
+
+			<div class="productInfo">
+				<div class="row productHoverTop">
+					<div class="col-md-6 productLikes">
+						<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <%= product.likes %> likes
+					</div>
+					<div class="col-md-6 text-right">
+						<a href="/stores/<%= product.store.name %>/<%= product.id %>">
+							<span class="label label-as-badge label-info">$<%= product.price %></span>
+						</a>
+					</div>
+				</div>
+				<div class="productHoverBottom">
+					<div class="row">
+						<div class="col-md-12">
+							<%= product.name %>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<a href="/stores/<%= product.store.name %>"><%= product.store.name %></a>
+						</div>
+						<div class="col-md-6 text-right">
+							<button type="button" class="btn btn-success">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
 		<% end %>
 	</div>
 </div>
