--- a/views/index.erb
+++ b/views/index.erb
@@ -14,18 +14,16 @@
 					</div>
 					<div class="col-md-6 text-right">
 						<a href="/stores/<%= product.store.name %>/<%= product.id %>">
-							<span class="label label-as-badge label-info">$<%= product.price %></span>
+							<span class="label label-as-badge label-info">$<%= "%.0f" % product.price %></span>
 						</a>
 					</div>
 				</div>
 				<div class="productHoverBottom">
 					<div class="row">
-						<div class="col-md-12">
-							<%= product.name %>
-						</div>
+						<div class="col-md-12 productNameDisplay"><%= product.name %></div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-6 storeNameDisplay">
 							<a href="/stores/<%= product.store.name %>"><%= product.store.name %></a>
 						</div>
 						<div class="col-md-6 text-right">
