--- a/views/store_new_page.erb
+++ b/views/store_new_page.erb
@@ -17,6 +17,10 @@
           <label for="storeLocation">Location</label>
           <input type="text" class="form-control" name="storeLocation" placeholder="E.g. Melbourne, Australia">
         </div>
+        <div class="form-group">
+          <label for="storeDescription">Brief Description</label>
+          <textarea class="form-control" name="storeDescription" rows="4" placeholder="Write a description of your store that will make people want to see your products..."></textarea>
+        </div>
         <button type="submit" class="btn btn-default">Create</button>
       </form>
     </div>
