--- a/views/store_show_page.erb
+++ b/views/store_show_page.erb
@@ -1,6 +1,8 @@
-<div class="container" id="feed">
-	<h1 class="text-center"><%= @store.name %></h1>
-	<div class="row">
+<div class="container">
+	<div class="row text-center">
+		<h1><%= @store.name %></h1>
+	</div>
+	<div id="feed" class="row">
 		<% @products.each do |product| %>
 		<div class="item">
 			<a href="/stores/<%= @store.name %>/<%= product.id %>">
