--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,14 @@
-
-<div class="container" id="feed">
-	<div class="row">
+<div class="container" >
+	<div id="feed" class="row">
 		<% @products.each do |product| %>
-			<div class="item">
+		<div class="item">
 			<a href="/stores/<%= product.store.name %>/<%= product.id %>">
 				<img src="<%= product.image_url %>" class="img-responsive" class="img-responsive img-rounded">
 			</a>
-
 			<div class="productInfo">
 				<div class="row productHoverTop">
 					<div class="col-md-6 productLikes">
-						<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <%= product.likes %> likes
+						<span id="<%= product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <%= product.likes %> likes
 					</div>
 					<div class="col-md-6 text-right">
 						<a href="/stores/<%= product.store.name %>/<%= product.id %>">
@@ -31,9 +29,9 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
+
 		<% end %>
 	</div>
 </div>
