--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 			<div class="productInfo">
 				<div class="row productHoverTop">
 					<div class="col-md-6 productLikes">
-						<span id="<%= product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <%= product.likes %> likes
+						<span id="<%= product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= product.id %>likeNumber"><%= product.likes %></span> likes
 					</div>
 					<div class="col-md-6 text-right">
 						<a href="/stores/<%= product.store.name %>/<%= product.id %>">
