--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -2,6 +2,9 @@
 	<div class="row">
 		<div class="col-md-5">
 			<img src="<%= @product.image_url %>" class="img-responsive">
+			<div class="row categories">
+				<p><strong>Category: </strong>	<%= @product.category.name %></p>
+			</div>
 			<div class="row">
 				<div class="col-md-2">
 					<a href="/stores/<%= @store.name %>/<%= @product.id %>/edit"><button class="btn btn-primary">Edit</button></a>
@@ -14,9 +17,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
-			<div class="likes">
-				<p><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <%= @product.likes %> people like this</p>
+		<div class="col-md-6 productDetails">
+			<div class="likes productLikes">
+				<p><span id="<%= @product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= @product.id %>likeNumber"><%= @product.likes %></span> people like this</p>
 			</div>
 			<div class="row">
 				<div class="col-md-5 col-md-offset-1">
