--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<div class="container" >
+<div class="container-fluid" >
 	<div id="feed" class="row">
 		<% @products.each do |product| %>
 		<div class="item">
