--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,6 +26,12 @@
         <li><a href="/stores/new">Create new store</a></li>
         <li><a href="/signup">Login</a></li>
       </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" size="60" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
     </div>
   </div>
 </nav>
