--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,11 +26,12 @@
         <li><a href="/stores/new">Create new store</a></li>
         <li><a href="/signup">Login</a></li>
       </ul>
-      <form class="navbar-form navbar-right" role="search">
+
+      <form class="navbar-form navbar-right" action="/search">
         <div class="form-group">
-          <input type="text" class="form-control" size="60" placeholder="Search">
+          <input type="text" class="form-control" name="search" size="60" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Search</button>
       </form>
     </div>
   </div>
