--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,8 +17,11 @@
   <div class="container-fluid">
 
     <div class="collapse navbar-collapse">
+      <div class="navbar-left logo">
+        <a href="/"><h1>SW<span>A</span>G</h1></a>
+      </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/stores">Stores</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
