--- a/views/search.erb
+++ b/views/search.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
 	<h3>Yo dude, there's nothing under '<%= params[:search] %>' yet...</h3>
 	<p>Perhaps you should create something...</p>
-	<button class="btn btn-info"><a href="/product/new">Create A Product</a></button>
+<a href="/product/new" class="btn btn-info">Create A Product</a>
 </div>
