--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-5">
-			<img src="<%= @product.image_url %>" class="img-responsive">
+			<img src="<%= @product.image_url %>" class="img-responsive img-full">
 			<div class="row categories">
 				<p><strong>Category: </strong>	<%= @product.category.name %></p>
 			</div>
@@ -27,7 +27,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<button type="button" class="btn btn-info btn-lg">Add to cart</button>
+					<button type="button" class="btn btn-success btn-lg">Add to Bag</button>
 				</div>
 			</div>
 
