--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -23,7 +23,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-5 col-md-offset-1">
-					<div class="price">$<%= "%.2f" % @product.price %> <span>plus shipping</span>
+					<div class="price">
+						$<%= "%.2f" % @product.price %>
 					</div>
 				</div>
 				<div class="col-md-6">
