--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,27 +14,39 @@
 
 <!-- Nav Bar -->
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid notFullWidth">
 
     <div class="collapse navbar-collapse">
       <div class="navbar-left logo">
         <a href="/"><h1>SW<span>A</span>G</h1></a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
+        <% if logged_in? %>
         <li><a href="/stores">Stores</a></li>
+        <% end %>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/product/new">Create new product</a></li>
-        <li><a href="/stores/new">Create new store</a></li>
-        <li><a href="/signup">Login</a></li>
-      </ul>
+        <div class="navbar-right">
+        <% if logged_in? %>
+          <ul class="nav navbar-nav">
+            <li><a href="/product/new">Create new product</a></li>
+            <li><a href="/stores/new">Create new store</a></li>
+          </ul>
+            <form class="form-inline navbar-right" action="/session" method="post">
+              <input type="hidden" name="_method" value="delete">
+              <button type="submit" class="btn btn-default navbar-btn">Log Out</button>
+            </form>
+          <% else %>
+            <a href="/signup" class="btn btn-warning navbar-btn">Sign up</a>
+            <a href="/login" class="btn btn-info navbar-btn">Log In</a>
+          <% end %>
+          </div>
 
-      <form class="navbar-form navbar-right" action="/search">
+
+      <form class="navbar-form text-center" action="/search">
         <div class="form-group">
           <input type="text" class="form-control" name="search" size="60" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn btn-success">Search</button>
       </form>
     </div>
   </div>
