--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-6 col-centered">
+  <div class="row customBox">
+    <div class="col-md-4 col-md-offset-2">
 
     <h3 class="text-center">Create an account</h3>
 
@@ -17,8 +17,14 @@
           <label for="inputPassword">Password</label>
           <input type="password" class="form-control" name="inputPassword" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Let's Go!</button>
+        <button type="submit" class="btn btn-success">Let's Go!</button>
       </form>
     </div>
+    <div class="col-md-4 col-md-offset-1 text-center aside">
+      <h3>Or Log In</h3>
+      <p>Already have an account full of swag?</p>
+      <a href="/login" class="btn btn-success">Log in</a>
+    </div>
+
   </div>
 </div>
