Edit signUp Modal

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,9 +7,9 @@
         <h1>SW<span>A</span>G</h1>
       	<h2>You're not signed up yet!</h2>
       	<h4>You should fix that...</h4>
-      	<button class="btn btn-success btn-lg regText"><a href="/signup" style="color: white">I deserve swag</a></button>
+      	<button class="btn btn-success btn-lg regText"><a href="/signup" style="color: white">Create Account</a></button>
       	or
-      	<button class="btn btn-default btn-lg regText" data-dismiss="modal" aria-label="Close">I hate swag</button>
+      	<button class="btn btn-default btn-lg regText" data-dismiss="modal" aria-label="Close">Maybe later</button>
       </div>
     </div>
   </div>
