--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 	<title>Photo App</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" href="/images/swag.ico">
   <script src="/js/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/imagesloaded.js"></script>
