--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Photo App</title>
+	<title>SWAG | Smarter Shopping</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="/images/swag.ico">
