--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -2,40 +2,45 @@
 	<div class="row">
 		<div class="col-md-5">
 			<img src="<%= @product.image_url %>" class="img-responsive img-full">
-			<div class="row categories">
-				<p><strong>Category: </strong>	<%= @product.category.name %></p>
-			</div>
-			<% if logged_in? %>
-				<div class="row">
-					<div class="col-md-2">
-						<a href="/stores/<%= @store.name %>/<%= @product.id %>/edit"><button class="btn btn-primary">Edit</button></a>
-					</div>
-					<div class="col-md-2">
-						<form action="/product/<%= @product.id %>/delete" method="post">
-							<input type="hidden" name="_method" value="delete">
-							<button class="btn btn-warning">Delete</button>
-						</form>
-					</div>
-				</div>
-				<% end %>
-		</div>
-		<div class="col-md-6 productDetails">
-			<div class="likes productLikes">
-				<p><span id="<%= @product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= @product.id %>likeNumber"><%= @product.likes %></span> people like this</p>
-			</div>
-			<div class="row">
-				<div class="col-md-5 col-md-offset-1">
-					<div class="price">
-						$<%= "%.2f" % @product.price %>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<button type="button" class="btn btn-success btn-lg">Add to Bag</button>
-				</div>
-			</div>
 
-			<h3><%= @product.name %></h3>
-			<p><%= @product.description.gsub(/\n/, '<br/>') %></p>
+
+			<!-- Edit and Delete Buttons -->
+			<div class="row text-center">
+				<% if logged_in? %>
+					<a href="/stores/<%= @store.name %>/<%= @product.id %>/edit">Edit</a> |
+					<form class="inline" action="/product/<%= @product.id %>/delete" method="post">
+						<input type="hidden" name="_method" value="delete">
+						<button id="delete_button_link" class="btn btn-link">Delete</button>
+					</form>
+				<% end %>
+			</div>
+			<!-- End of Edit and Delete Buttons -->
+
+		</div>
+		<div class="col-md-4 productDetails">
+			<h3 class="underline"><%= @product.name %></h3>
+			<div class="row">
+				<div class="col-md-6 likes productLikes">
+					<p><span id="<%= @product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= @product.id %>likeNumber"><%= @product.likes %></span> people like this</p>
+				</div>
+				<div class="col-md-6 text-right">
+					<p class="categories"><strong>Category: </strong>	<a href="/search?search=<%= @product.category.name %>"><%= @product.category.name %></a></p>
+				</div>
+			</div>
+			<div class="productDescription">
+				<p><%= @product.description.gsub(/\n/, '<br/>') %></p>
+			</div>
+		</div>
+
+		<div class="col-md-3 buyInfo text-center">
+			<div class="row">
+				<div class="col-md-4 price">
+					$<%= "%.2f" % @product.price %>
+				</div>
+				<div class="col-md-8">
+					<a href="#" class="btn btn-success btn-lg">Add to Bag</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
