--- a/views/swagbag.erb
+++ b/views/swagbag.erb
@@ -4,11 +4,12 @@
 
 <table class="table table-striped table-hover" id="cart">
 	<tr>
-		<th>Image</th>
 		<th>Product</th>
+		<th></th>
 		<th>Qty</th>
 		<th>Unit Price</th>
 		<th class="text-right">Total</th>
+		<th></th>
 	</tr>
 
 <% @lineItems.each do |lineitem| %>
@@ -18,6 +19,12 @@
 	<td><%= lineitem.qty %></td>
 	<td>$<%= "%.2f" % lineitem.unit_price %></td>
 	<td class="text-right">$<%= "%.2f" % lineitem.line_item_price %></td>
+	<td>
+		<form action="/swagbag/<%= lineitem.product_id %>" method="post">
+			<input type="hidden" name="_method" value="delete">
+			<button class="close"><span aria-hidden="true">&times;</span></button>
+	</form>
+</td>
 </tr>
 <% end %>
 <tr>
