--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -17,7 +17,7 @@
 			<!-- End of Edit and Delete Buttons -->
 
 		</div>
-		<div class="col-md-4 productDetails">
+		<div class="col-md-5 productDetails">
 			<h3 class="underline"><%= @product.name %></h3>
 			<div class="row">
 				<div class="col-md-6 likes productLikes">
@@ -32,16 +32,19 @@
 			</div>
 		</div>
 
-		<div class="col-md-3 buyInfo text-center">
-			<div class="row">
-				<div class="col-md-4 price">
+		<div class="col-md-2 text-center">
+
+			<form action="/swagbag/<%= @product.id %>" method="post">
+					<button type="submit" class="btn btn-success btn-lg">Add to Bag</button>
+			</form>
+
+			<div class="row buyInfo">
+				<div class="price">
 					$<%= "%.2f" % @product.price %>
 				</div>
-				<div class="col-md-8">
-					<form action="/swagbag/<%= @product.id %>" method="post">
-					<button type="submit" class="btn btn-success btn-lg">Add to Bag</button>
-				</form>
-				</div>
+			</div>
+
+
 			</div>
 		</div>
 	</div>
