--- a/views/product_show_page.erb
+++ b/views/product_show_page.erb
@@ -1,51 +1,51 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-5">
-			<img src="<%= @product.image_url %>" class="img-responsive img-full">
+
+	<div class="container productDetails">
+		<div class="row">
+			<div class="col-md-5">
+				<img src="<%= @product.image_url %>" class="img-responsive img-full">
 
 
-			<!-- Edit and Delete Buttons -->
-			<div class="row text-center">
-				<% if logged_in? %>
-					<a href="/stores/<%= @store.name %>/<%= @product.id %>/edit">Edit</a> |
-					<form class="inline" action="/product/<%= @product.id %>/delete" method="post">
-						<input type="hidden" name="_method" value="delete">
-						<button id="delete_button_link" class="btn btn-link">Delete</button>
-					</form>
-				<% end %>
-			</div>
-			<!-- End of Edit and Delete Buttons -->
-
-		</div>
-		<div class="col-md-5 productDetails">
-			<h3 class="underline"><%= @product.name %></h3>
-			<div class="row">
-				<div class="col-md-6 likes productLikes">
-					<p><span id="<%= @product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= @product.id %>likeNumber"><%= @product.likes %></span> people like this</p>
+				<!-- Edit and Delete Buttons -->
+				<div class="row text-center">
+					<% if logged_in? %>
+						<a href="/stores/<%= @store.name %>/<%= @product.id %>/edit">Edit</a> |
+						<form class="inline" action="/product/<%= @product.id %>/delete" method="post">
+							<input type="hidden" name="_method" value="delete">
+							<button id="delete_button_link" class="btn btn-link">Delete</button>
+						</form>
+					<% end %>
 				</div>
-				<div class="col-md-6 text-right">
-					<p class="categories"><strong>Category: </strong>	<a href="/search?search=<%= @product.category.name %>"><%= @product.category.name %></a></p>
+				<!-- End of Edit and Delete Buttons -->
+
+			</div>
+			<div class="col-md-5 ">
+				<h3 class="underline"><%= @product.name %></h3>
+				<div class="row">
+					<div class="col-md-6 likes productLikes">
+						<p><span id="<%= @product.id %>" class="heartIcon glyphicon glyphicon-heart-empty" aria-hidden="true"></span> <span class="<%= @product.id %>likeNumber"><%= @product.likes %></span> people like this</p>
+					</div>
+					<div class="col-md-6 text-right">
+						<p class="categories"><strong>Category: </strong>	<a href="/search?search=<%= @product.category.name %>"><%= @product.category.name %></a></p>
+					</div>
 				</div>
-			</div>
-			<div class="productDescription">
-				<p><%= @product.description.gsub(/\n/, '<br/>') %></p>
-			</div>
-		</div>
-
-		<div class="col-md-2 text-center">
-
-			<form action="/swagbag/<%= @product.id %>" method="post">
-					<button type="submit" class="btn btn-success btn-lg">Add to Bag</button>
-			</form>
-
-			<div class="row buyInfo">
-				<div class="price">
-					$<%= "%.2f" % @product.price %>
+				<div class="productDescription">
+					<p><%= @product.description.gsub(/\n/, '<br/>') %></p>
 				</div>
 			</div>
 
+			<div class="col-md-2 text-center ">
+				<form class="text-right" action="/swagbag/<%= @product.id %>" method="post">
+						<button type="submit" class="btn btn-success btn-lg">Add to Bag</button>
+				</form>
 
+				<div class="row buyInfo">
+					<div class="price">
+						$<%= "%.2f" % @product.price %>
+					</div>
+				</div>
+
+
+				</div>
 			</div>
 		</div>
-	</div>
 </div>
